--- a/RozetkaOnePage.app/RozetkaOnePage.app.iOS/RozetkaOnePage.app.iOS.csproj
+++ b/RozetkaOnePage.app/RozetkaOnePage.app.iOS/RozetkaOnePage.app.iOS.csproj
@@ -189,6 +189,9 @@
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="DLToolkit.Forms.Controls.FlowListView">
+      <Version>2.0.11</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="3.4.0.1008975" />
     <PackageReference Include="Prism.DryIoc.Forms" Version="7.1.0.431" />
   </ItemGroup>
