--- a/RozetkaOnePage.app/RozetkaOnePage.app.iOS/RozetkaOnePage.app.iOS.csproj
+++ b/RozetkaOnePage.app/RozetkaOnePage.app.iOS/RozetkaOnePage.app.iOS.csproj
@@ -90,8 +90,11 @@
   <ItemGroup>
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
+    <Compile Include="Services\StatusBarColor.cs" />
     <None Include="Entitlements.plist" />
-    <None Include="Info.plist" />
+    <None Include="Info.plist">
+      <SubType>Designer</SubType>
+    </None>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <ITunesArtwork Include="iTunesArtwork@1x.png" />
     <ITunesArtwork Include="iTunesArtwork@2x.png" />
