--- a/RozetkaOnePage.app/RozetkaOnePage.app.iOS/RozetkaOnePage.app.iOS.csproj
+++ b/RozetkaOnePage.app/RozetkaOnePage.app.iOS/RozetkaOnePage.app.iOS.csproj
@@ -197,6 +197,9 @@
     </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="3.4.0.1008975" />
     <PackageReference Include="Prism.DryIoc.Forms" Version="7.1.0.431" />
+    <PackageReference Include="Xamarin.LiveReload">
+      <Version>0.3.27</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RozetkaOnePage.app\RozetkaOnePage.app.csproj">
