--- a/RozetkaOnePage.app/RozetkaOnePage.app/RozetkaOnePage.app.csproj
+++ b/RozetkaOnePage.app/RozetkaOnePage.app/RozetkaOnePage.app.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="DLToolkit.Forms.Controls.FlowListView" Version="2.0.11" />
     <PackageReference Include="Xamarin.Forms" Version="3.4.0.1008975" />
     <PackageReference Include="Prism.DryIoc.Forms" Version="7.1.0.431" />
+    <PackageReference Include="Xamarin.LiveReload" Version="0.3.27" />
   </ItemGroup>
 
   <ItemGroup>
