--- a/RozetkaOnePage.app/RozetkaOnePage.app/RozetkaOnePage.app.csproj
+++ b/RozetkaOnePage.app/RozetkaOnePage.app/RozetkaOnePage.app.csproj
@@ -21,6 +21,9 @@
     <EmbeddedResource Update="Views\ProductDetailView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\SearchView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
